[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/pexeso2.png" type="Texture" id=1]
[ext_resource path="res://mini-games/pairs/Card.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/PatrickHand-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/pexesoEmpty.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=2]
size = 62
font_data = ExtResource( 4 )

[node name="Card" type="Control" groups=["cards"]]
anchor_left = 0.00925926
anchor_top = 0.00520833
anchor_right = 0.259259
anchor_bottom = 0.145833
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = 10.0003
margin_bottom = 10.0006
rect_min_size = Vector2( 270, 270 )
rect_pivot_offset = Vector2( 135, 135 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TextureRect3" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = 10.0
margin_bottom = 10.0
rect_scale = Vector2( 1e-05, 1 )
rect_pivot_offset = Vector2( 135, 135 )
texture = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="Label" type="Label" parent="TextureRect3"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 135, 135 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Tween" type="Tween" parent="."]

[node name="Tween2" type="Tween" parent="."]

[node name="Tween3" type="Tween" parent="."]

[node name="Tween4" type="Tween" parent="."]

[connection signal="gui_input" from="." to="." method="_on_Card_gui_input"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="tween_all_completed" from="Tween3" to="." method="_on_Tween3_tween_all_completed"]
[connection signal="tween_all_completed" from="Tween4" to="." method="_on_Tween4_tween_all_completed"]
